fix(style): hidd scrollbar + fixed max height for staf floors

--- a/style.css
+++ b/style.css
@@ -36,13 +36,16 @@ body {
 .border {
     background-image: linear-gradient(to right,rgb(255, 249, 249), rgb(255, 240, 240));
     padding: 2px 10px;
-    height: 200px;
+    max-height: 200px;
     width: 320px;
     border-radius: 20px;
     overflow-y: scroll;
     position: relative;
     box-shadow: 0px 0px  5px hsl(0, 100%, 50%);
     top: 80px;
+}
+.border::-webkit-scrollbar{
+    width: 0;
 }
 
 .border:hover {
@@ -300,5 +303,8 @@ img{
        
         width: 50%;
         margin-top: -60px;
+    }
+    .formal{
+        width: 40%;
     }
 }
